prod/collab/db-managed.yaml
kind: Service
apiVersion: v1
metadata:
  name: collab-db
  namespace: gccollab
spec:
  type: ExternalName
  externalName: collab.mysql.database.azure.com
