prod/collab/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-db
  namespace: prod
spec:
  clusterIP: None
  ports: 
    - protocol: TCP
      port: 3306
  selector:
    app: collab-db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: collab-db-deployment
  namespace: prod
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: collab-db
    spec:
      containers:
      - name: mysql
        image: mariadb:10.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: collab-db-volume
      volumes:
      - name: collab-db-volume\
        azureDisk:
          kind: Managed
          diskName: wikiDBVolume
          diskURI:
