prod/collab/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-solr
  namespace: collab-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collab-solr
  template:
    metadata:
      labels:
        app: collab-solr
    spec:
      containers:
      - name: solr
        image: solr:6
        ports:
        - containerPort: 8983
        volumeMounts:
        - mountPath: /opt/solr/server/solr/mycores
          name: solr-data
      volumes:
      - name: solr-data
        persistentVolumeClaim:
          claimName: collab-solr-data-volume-claim-csi
---
apiVersion: v1
kind: Service
metadata:
  name: collab-solr
  namespace: collab-test
spec:
  selector:
    app: collab-solr
  ports:
    - protocol: TCP
      port: 8983
  type: LoadBalancer
