prod/collab/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab
  namespace: prod
  labels:
    app: collab
spec:
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: collab
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: collab-deployment
  namespace: prod
spec:
  replicas: 1    # let the autoscaler handle this
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: collab
    spec:
      containers:
      - name: collab
        image: phanoix/gcconnex@sha256:cdcfc6ec5cd6e290bdb9557777c0e746b8a0ca03fdee71291317068e5f2e2cdf
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /splash/
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /splash/
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "1024Mi"
            cpu: "0.5"
          limits:
            memory: "2048Mi"
            cpu: "0.75"
        volumeMounts:
        - mountPath: /sites/gccollab_data
          name: collab-data-volume
        - mountPath: /var/www/html/engine/settings.php
          subPath: settings.php
          name: collab-settings
        - mountPath: /var/www/html/.htaccess
          subPath: htaccess
          name: collab-settings
      volumes:
      - name: collab-data-volume
        persistentVolumeClaim:
          claimName: collab-data-volume-claim
      - name: collab-settings
        configMap:
          name: collab-config
